--- a/SQL-generate_script_data.ipynb
+++ b/SQL-generate_script_data.ipynb
@@ -114,32 +114,94 @@
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import random\n",
     " \n",
-    "# Number of records\n",
-    "n = 300\n",
-    " \n",
-    "# Example service names (expand as needed)\n",
-    "base_services = [\n",
-    "    \"General Consultation\", \"X-Ray\", \"MRI Scan\", \"Blood Test\", \"ECG\", \"Vaccination\",\n",
-    "    \"Surgery\", \"Physiotherapy\", \"Dialysis\", \"Chemotherapy\", \"Ultrasound\", \"CT Scan\",\n",
-    "    \"Dental Cleaning\", \"Eye Exam\", \"Cardiac Stress Test\", \"Orthopedic Assessment\",\n",
-    "    \"ENT Checkup\", \"Dermatology Consultation\", \"Pediatric Checkup\", \"Obstetric Ultrasound\"\n",
+    "# Full list of 300 core medical services\n",
+    "service_names = [\n",
+    "    \"General health check-up\", \"Annual physical exam\", \"Immunization administration\", \"Pediatric check-ups\",\n",
+    "    \"Geriatric assessment\", \"Adult wellness visit\", \"Vision screening\", \"Hearing screening\",\n",
+    "    \"Growth and development evaluation\", \"Blood pressure monitoring\", \"BMI calculation\", \"Diabetes screening\",\n",
+    "    \"Cholesterol testing\", \"Cancer screening (e.g., mammogram)\", \"Prostate exam\", \"Pap smear\",\n",
+    "    \"Colon cancer screening (colonoscopy)\", \"Skin cancer screening\", \"Smoking cessation counseling\",\n",
+    "    \"Travel medicine consultation\", \"Pre-employment check-up\", \"School physical examination\", \"Sports physicals\",\n",
+    "    \"Family planning counseling\", \"Sexual health screening\", \"Nutritional counseling\", \"Mental health screening\",\n",
+    "    \"Preventive dental screening\", \"Risk factor assessment\", \"Health education services\",\n",
+    "    \"Hypertension management\", \"Diabetes management\", \"Asthma treatment\", \"COPD management\",\n",
+    "    \"Thyroid disorder management\", \"GERD treatment\", \"Anemia evaluation\", \"Liver function assessment\",\n",
+    "    \"Kidney disease management\", \"Rheumatoid arthritis care\", \"Autoimmune disease treatment\",\n",
+    "    \"Chronic fatigue evaluation\", \"Electrolyte imbalance management\", \"Heart failure monitoring\",\n",
+    "    \"Cardiac risk evaluation\", \"Atrial fibrillation management\", \"Stroke risk assessment\", \"Lipid management\",\n",
+    "    \"Gout treatment\", \"Infectious disease evaluation\", \"Tuberculosis testing\", \"HIV/AIDS management\",\n",
+    "    \"Hepatitis care\", \"Osteoporosis screening\", \"Fever of unknown origin evaluation\", \"Appendectomy\",\n",
+    "    \"Hernia repair\", \"Gallbladder removal (cholecystectomy)\", \"Hemorrhoid surgery\", \"Biopsy (skin, organ)\",\n",
+    "    \"Mastectomy\", \"Hysterectomy\", \"Cesarean section\", \"Tonsillectomy\", \"Cataract surgery\", \"Corneal transplant\",\n",
+    "    \"Orthopedic surgery\", \"Joint replacement (hip/knee)\", \"Carpal tunnel release\", \"Varicose vein surgery\",\n",
+    "    \"Bowel resection\", \"Splenectomy\", \"Thyroidectomy\", \"Laparoscopy (diagnostic)\", \"Colonoscopy with polypectomy\",\n",
+    "    \"Prostate surgery\", \"ENT surgical procedures\", \"Burn debridement\", \"Skin graft\", \"Trauma surgery\",\n",
+    "    \"Trauma care\", \"Fracture stabilization\", \"Wound closure (sutures/staples)\", \"CPR and resuscitation\",\n",
+    "    \"Sepsis management\", \"Chest pain evaluation\", \"Poisoning treatment\", \"Foreign body removal\",\n",
+    "    \"Acute asthma attack care\", \"Snakebite management\", \"Heat stroke treatment\", \"Hypoglycemia correction\",\n",
+    "    \"Epistaxis control\", \"Acute allergic reaction treatment\", \"Head injury assessment\", \"Burn assessment & care\",\n",
+    "    \"Fever management\", \"Diarrhea & dehydration treatment\", \"Dog bite care\", \"Acute urinary retention relief\",\n",
+    "    \"Antenatal care\", \"High-risk pregnancy management\", \"Normal vaginal delivery\", \"Postpartum care\",\n",
+    "    \"Family planning services\", \"Menopause management\", \"Infertility evaluation\", \"Pelvic inflammatory disease treatment\",\n",
+    "    \"Pap smear\", \"Colposcopy\", \"IUD insertion/removal\", \"Breast lump evaluation\", \"Hysteroscopy\",\n",
+    "    \"Endometriosis management\", \"Polycystic ovarian syndrome (PCOS) care\", \"Ovarian cyst evaluation\",\n",
+    "    \"Uterine fibroid treatment\", \"Cervical cancer screening\", \"Hormone therapy\", \"Prenatal genetic counseling\",\n",
+    "    \"Newborn screening\", \"Neonatal jaundice management\", \"Pediatric immunizations\", \"Developmental delay evaluation\",\n",
+    "    \"Pediatric nutrition counseling\", \"Common cold treatment\", \"Fever management\", \"Ear infection treatment\",\n",
+    "    \"Pediatric asthma care\", \"ADHD assessment\", \"Autism spectrum screening\", \"Childhood obesity management\",\n",
+    "    \"School health exams\", \"Growth disorders evaluation\", \"Pediatric ENT services\", \"ECG/EKG\", \"Echocardiography\",\n",
+    "    \"Treadmill stress test\", \"Holter monitoring\", \"Angiography\", \"Angioplasty\", \"Cardiac catheterization\",\n",
+    "    \"Heart failure management\", \"Pacemaker insertion\", \"Valve replacement\", \"Arrhythmia management\",\n",
+    "    \"Cardiomyopathy treatment\", \"Hypertension evaluation\", \"Cardiac rehabilitation\", \"Lipid panel analysis\",\n",
+    "    \"Bone fracture treatment\", \"Arthritis management\", \"Joint dislocation reduction\", \"Orthopedic casting\",\n",
+    "    \"Sports injury care\", \"Osteoporosis screening\", \"Knee arthroscopy\", \"Spine surgery\", \"Physiotherapy referral\",\n",
+    "    \"Tendon repair\", \"ACL reconstruction\", \"Bone density testing\", \"Clubfoot correction\", \"Scoliosis treatment\",\n",
+    "    \"Limb length discrepancy evaluation\", \"Stroke management\", \"Epilepsy treatment\", \"EEG (electroencephalogram)\",\n",
+    "    \"Parkinson’s disease care\", \"Alzheimer’s disease evaluation\", \"Migraine management\", \"Neuropathy treatment\",\n",
+    "    \"Multiple sclerosis care\", \"Dementia care\", \"Bell’s palsy management\", \"Muscle weakness evaluation\",\n",
+    "    \"Nerve conduction studies\", \"Traumatic brain injury management\", \"Vertigo evaluation\", \"Sleep disorder treatment\",\n",
+    "    \"Upper GI endoscopy\", \"Colonoscopy\", \"Liver function tests\", \"Hepatitis B/C management\", \"Ulcer treatment\",\n",
+    "    \"GERD evaluation\", \"Irritable bowel syndrome (IBS) care\", \"Crohn’s disease treatment\", \"Pancreatitis management\",\n",
+    "    \"Gallstone diagnosis\", \"Diarrhea/chronic constipation care\", \"Rectal bleeding evaluation\", \"Ascites treatment\",\n",
+    "    \"Liver cirrhosis management\", \"GI cancer screening\", \"Pulmonary function test (PFT)\", \"Asthma management\",\n",
+    "    \"COPD care\", \"Tuberculosis treatment\", \"Sleep apnea assessment\", \"Pleural effusion treatment\", \"Bronchoscopy\",\n",
+    "    \"Pneumonia care\", \"Interstitial lung disease management\", \"Lung cancer diagnosis\", \"Urinalysis\",\n",
+    "    \"Kidney function test\", \"Dialysis\", \"Prostate enlargement management\", \"Urinary tract infection treatment\",\n",
+    "    \"Kidney stone removal\", \"Bladder scan\", \"Erectile dysfunction care\", \"Nephrotic syndrome treatment\",\n",
+    "    \"Kidney transplant follow-up\", \"Acne treatment\", \"Eczema/psoriasis care\", \"Fungal infection treatment\",\n",
+    "    \"Skin biopsy\", \"Wart removal\", \"Mole evaluation\", \"Hair loss treatment\", \"Dermatitis management\",\n",
+    "    \"Cosmetic dermatology consult\", \"Skin cancer detection\", \"Hearing test (audiometry)\", \"Earwax removal\",\n",
+    "    \"Sinusitis treatment\", \"Tonsillitis care\", \"Nasal endoscopy\", \"Deviated septum evaluation\", \"Hearing aid fitting\",\n",
+    "    \"Voice disorder evaluation\", \"Tinnitus management\", \"Ear drum repair\", \"Vision correction testing\",\n",
+    "    \"Cataract evaluation\", \"Glaucoma testing\", \"Retinal exam\", \"Diabetic retinopathy screening\", \"LASIK consultation\",\n",
+    "    \"Dry eye treatment\", \"Red eye evaluation\", \"Eye injury management\", \"Strabismus treatment\", \"Depression treatment\",\n",
+    "    \"Anxiety disorder care\", \"Bipolar disorder management\", \"Schizophrenia treatment\", \"PTSD counseling\",\n",
+    "    \"Cognitive behavioral therapy\", \"Substance abuse treatment\", \"Grief counseling\", \"Eating disorder management\",\n",
+    "    \"Personality disorder evaluation\", \"X-ray\", \"CT scan\", \"MRI\", \"Ultrasound\", \"Mammography\", \"Bone scan\", \"PET scan\",\n",
+    "    \"Doppler study\", \"Thyroid scan\", \"Cardiac CT\", \"Contrast imaging\", \"IVP (intravenous pyelogram)\",\n",
+    "    \"HSG (hysterosalpingogram)\", \"DEXA scan\", \"Barium swallow\", \"Complete blood count (CBC)\", \"Liver function test (LFT)\",\n",
+    "    \"Renal panel\", \"Thyroid panel\", \"Blood glucose test\", \"Urine routine & microscopy\", \"Coagulation profile\",\n",
+    "    \"Culture & sensitivity tests\", \"Hormone assay\", \"Genetic testing\", \"Physiotherapy\", \"Occupational therapy\",\n",
+    "    \"Speech therapy\", \"Cardiac rehab\", \"Pulmonary rehab\", \"Post-stroke rehab\", \"Orthotic assessment\",\n",
+    "    \"Pain management therapy\", \"Gait training\", \"Neuro-rehabilitation\", \"Blood transfusion\", \"IV fluid therapy\",\n",
+    "    \"Oxygen therapy\", \"Medical records management\", \"Patient transportation\", \"Pharmacy dispensing\",\n",
+    "    \"Dietary service\", \"Health insurance assistance\", \"Medical certificate issuance\", \"Telemedicine consultation\"\n",
     "]\n",
     " \n",
-    "# Generate service names (repeat and enumerate for uniqueness)\n",
-    "service_names = []\n",
-    "for i in range(n):\n",
-    "    name = random.choice(base_services)\n",
-    "    service_names.append(f\"{name}\")\n",
+    "# Make sure we have exactly 300 unique services\n",
+    "assert len(service_names) == 300, \"Service list must contain exactly 300 items.\"\n",
     " \n",
+    "# Generate the DataFrame\n",
     "data = {\n",
-    "    \"service_id\": [i+1 for i in range(n)],\n",
+    "    \"service_id\": list(range(1, 301)),\n",
     "    \"service_name\": service_names,\n",
-    "    \"cost\": np.round(np.random.uniform(50, 5000, size=n), 2)\n",
+    "    \"cost\": np.round(np.random.uniform(50, 5000, size=300), 2)\n",
     "}\n",
     " \n",
     "df = pd.DataFrame(data)\n",
+    " \n",
+    "# Save to CSV\n",
     "df.to_csv(\"services_dataset.csv\", index=False)\n",
     " \n",
     "print(\"services_dataset.csv generated successfully!\")"
